tests/ui/impl-trait/precise-capturing/rpitit-captures-more-method-lifetimes.stderr
error: `use<...>` precise capturing syntax is currently not allowed in return-position `impl Trait` in traits
  --> $DIR/rpitit-captures-more-method-lifetimes.rs:6:53
   |
LL |     fn bar<'tr: 'tr>(&'tr mut self) -> impl Sized + use<Self>;
   |                                                     ^^^^^^^^^
   |
   = note: currently, return-position `impl Trait` in traits and trait implementations capture all lifetimes in scope
   = note: see issue #130044 <https://github.com/rust-lang/rust/issues/130044> for more information
   = help: add `#![feature(precise_capturing_in_traits)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: return type captures more lifetimes than trait definition
  --> $DIR/rpitit-captures-more-method-lifetimes.rs:11:40
   |
LL |     fn bar<'im: 'im>(&'im mut self) -> impl Sized + 'im {}
   |            ---                         ^^^^^^^^^^^^^^^^
   |            |
   |            this lifetime was captured
   |
note: hidden type must only reference lifetimes captured by this impl trait
  --> $DIR/rpitit-captures-more-method-lifetimes.rs:6:40
   |
LL |     fn bar<'tr: 'tr>(&'tr mut self) -> impl Sized + use<Self>;
   |                                        ^^^^^^^^^^^^^^^^^^^^^^
   = note: hidden type inferred to be `impl Sized + 'im`

error: aborting due to 2 previous errors

